Reduce PMD violations (no suppressions) (#646)